# DATENKRAKEN

./: .gitignore  .pre-commit-config.yaml  404.html  FRONTEND_ERROR_HANDLING_UPDATES.md  README.md  docker-compose.yml  example.env  flake.nix  frontend_err_handling_updates.md  index.html  pyproject.toml  requirements.txt
Handlungsempfehlung/: Dashboard.py  status_engine.py  weatherapi.env
arduino/: platformio.ini
database/: Dockerfile  docker-compose.yml  example.env
datenkraken-docs/: mkdocs.yml  requirements.txt
decision-engine/: parameter.json  status_engine.py  test_dashboard.py
fontend/: pyproject.toml
frontend/: Dockerfile  README.md  app.py  docker-compose.yml  example.env  functions.py  parameter.json  pyproject.toml  status_engine.py
frontend/src/: example_room_data.py  functions.py  parameter.json  status_engine.py
frontend/src/database/: orm.py
frontend/src/database/sql/: __init__.py  engine.py  orm.py
frontend/src/frontend/: __init__.py  app.py  functions.py  parameter.json  status_engine.py  utils.py
frontend/src/frontend/page_definition/: __init__.py  overview.py
frontend/src/frontend/page_definition/generic_analytics/: __init__.py  generic_analytics.py
frontend/src/frontend/page_definition/generic_analytics/widgets/: current_insights_widget.py  history_widget.py  utils.py
frontend/src/pages/: room1.py  room2.py
frontend/src/utility/: currentness.py  datafetcher.py
frontend/src/utility/bronze_sql/: orm.py
frontend/tests/: conftest.py  test_functions.py  test_status_engine.py
frontend/tests/accessibility/: test_accessibility.py
frontend/tests/database/: test_database.py
frontend/tests/database/sql/: test_engine.py  test_selection.py
frontend/tests/frontend/: test_utils.py
frontend/tests/frontend/widgets/: test_current_insights_widget.py  test_utils.py
frontend/tests/utility/: test_currentness.py  test_datafetcher.py
search/: search_index.json
subscription-script/: main.py  mqtt_util.py  (+1 more)
subscription_script/: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
subscription_script/src/subscription_script/: __init__.py  alerting.py  main.py  mqtt_util.py
subscription_script/src/subscription_script/sql/: __init__.py  engine.py  orm.py
subscription_script/tests/alerting/: test_alerting.py
subscription_script/tests/engine/: test_engine.py  test_insert_into_db.py
subscription_script/tests/mqtt_util/: test_mqtt_util.py
(+179 files in other folders)
