[project]
name = "frontend"
version = "0.1.0"
description = "DATENKRAKEN UI"
readme = "README.md"
authors = [
    { name = "cosi1110", email = "cosmas.penschke@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.0",
]

[project.scripts]
frontend = "frontend.app:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
]
